# freud

./: .bumpversion.toml  .clang-format  .clang-tidy  .coveragerc  .gitignore  .gitmodules  .ignore  .mailmap  .pre-commit-config-cpp.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.md  ContributorAgreement.md  FreudApiChanges.md  FreudDesignDoc.md  FreudDesignDoc.rst  HowToAddNewCode.md  LICENSE  MANIFEST.in  README.md  README.rst  SourceConventions.md  appveyor.yml  clang-format-diff-check.sh  contributors.txt  environment.yml  freud.sublime-project  pixi.toml  prek.toml  pyproject.toml  readthedocs.yml  renovate.json  requirements-precommit.txt  requirements-testing.txt  requirements.txt  setup.cfg  (+2 more)
cpp/: CMakeLists.txt  DCDLoader.cc  DCDLoader.h  Index1D.h  LinkCell.cc  LinkCell.h  RDF.cc  RDF.h  module.cc  num_util.cc  num_util.h  trajectory.cc  trajectory.h
cpp/bond/: BondingAnalysis.cc  BondingAnalysis.h  BondingR12.cc  BondingR12.h  BondingXY2D.cc  BondingXY2D.h  BondingXYT.cc  BondingXYT.h  BondingXYZ.cc  BondingXYZ.h
cpp/bootstrap/: Bootstrap.cc  Bootstrap.h
cpp/box/: Box.cc  Box.h  CMakeLists.txt  ParticleBuffer.cc  ParticleBuffer.h  PeriodicBuffer.cc  PeriodicBuffer.h  box-files.cmake  box.cc  box.h  export-box.h  export_Box.cc  export_Box.h  module-box.cc
cpp/cluster/: CMakeLists.txt  Cluster.cc  Cluster.h  ClusterProperties.cc  ClusterProperties.h  PhaseCluster.cc  PhaseCluster.h
cpp/complement/: complement.cc  complement.h
cpp/density/: CMakeLists.txt  ContinuousCoordination.cc  ContinuousCoordination.h  CorrelationFunction.cc  CorrelationFunction.h  GaussianDensity.cc  GaussianDensity.h  LocalDensity.cc  LocalDensity.h  RDF.cc  RDF.h  SphereVoxelization.cc  SphereVoxelization.h  Voxelization.cc  Voxelization.h  WeightedRDF.cc  WeightedRDF.h  cRDF.cc  cRDF.h
cpp/diffraction/: CMakeLists.txt  DiffractionPattern.cc  DiffractionPattern.h  IntermediateScattering.cc  IntermediateScattering.h  StaticStructureFactor.cc  StaticStructureFactor.h  StaticStructureFactorDebye.cc  StaticStructureFactorDebye.h  StaticStructureFactorDirect.cc  StaticStructureFactorDirect.h  StaticStructureFactorUtil.cc  StaticStructureFactorUtil.h  StructureFactor.cc  StructureFactor.h  StructureFactorDirect.cc  StructureFactorDirect.h
cpp/environment/: AngularSeparation.cc  AngularSeparation.h  BondOrder.cc  BondOrder.h  CMakeLists.txt  LocalBondProjection.cc  LocalBondProjection.h  LocalDescriptors.cc  LocalDescriptors.h  MatchEnv.cc  MatchEnv.h  Pairing2D.cc  Pairing2D.h  Registration.h
cpp/interface/: InterfaceMeasure.cc  InterfaceMeasure.h
cpp/kspace/: kspace.cc  kspace.h
cpp/lindemann/: lindemann.cc  lindemann.h
cpp/locality/: AABB.h  AABBQuery.cc  AABBQuery.h  AABBTree.h  BondHistogramCompute.h  CMakeLists.txt  Cluster.cc  Cluster.h  Filter.h  FilterRAD.cc  FilterRAD.h  FilterSANN.cc  FilterSANN.h  GaussianDensity.cc  GaussianDensity.h  LinkCell.cc  LinkCell.h  NearestNeighbors.cc  NearestNeighbors.h  NeighborBond.h  NeighborComputeFunctional.cc  NeighborComputeFunctional.h  NeighborList.cc  NeighborList.h  NeighborPerPointIterator.cc  NeighborPerPointIterator.h  NeighborQuery.cc  NeighborQuery.h  PeriodicBuffer.cc  PeriodicBuffer.h  RDF.cc  RDF.h  RawPoints.h  SpatialData.cc  SpatialData.h  VoroPlusPlus.cc  VoroPlusPlus.h  Voronoi.cc  Voronoi.h  export_BondHistogramCompute.cc  (+13 more)
cpp/localqi/: LocalQi.cc  LocalQi.h
cpp/localql/: LocalQl.cc  LocalQl.h
cpp/molfile/: dcdplugin.cc  endianswap.h  fastio.h  fastio_impl.h  molfile_plugin.h  molfile_plugins.h
cpp/network/: IMDReader.cc  IMDReader.h
cpp/order/: AngularSeparation.cc  AngularSeparation.h  BondOrder.cc  BondOrder.h  CMakeLists.txt  ContinuousCoordination.cc  ContinuousCoordination.h  Cubatic.cc  Cubatic.h  CubaticOrderParameter.cc  CubaticOrderParameter.h  EntropicBonding.cc  EntropicBonding.h  EntropicBondingRT.cc  EntropicBondingRT.h  HexOrderParameter.cc  HexOrderParameter.cc.orig  HexOrderParameter.h  HexTransOrderParameter.cc  HexTransOrderParameter.h  HexaticTranslational.cc  HexaticTranslational.h  LocalBondProjection.cc  LocalBondProjection.h  LocalDescriptors.cc  LocalDescriptors.h  LocalQl.cc  LocalQl.h  LocalQlNear.cc  LocalQlNear.h  LocalWl.cc  LocalWl.h  LocalWlNear.cc  LocalWlNear.h  MatchEnv.cc  MatchEnv.h  NearestNeighbors.cc  NearestNeighbors.h  Nematic.cc  Nematic.h  (+22 more)
cpp/pair/: pair.cc  pair.h
cpp/pairing/: pairing.cc  pairing.h  pairing2D.cc  pairing2D.h
cpp/parallel/: CMakeLists.txt  module-parallel.cc  parallel-files.cmake  tbb_config.cc  tbb_config.h
cpp/pmft/: CMakeLists.txt  PMFT.cc  PMFT.h  PMFTR12.cc  PMFTR12.h  PMFTRPM.cc  PMFTRPM.h  PMFTRtheta.cc  PMFTRtheta.h  PMFTScalarInvariants.cc  PMFTScalarInvariants.h  PMFTXY.cc  PMFTXY.h  PMFTXY2D.cc  PMFTXY2D.h  PMFTXYT.cc  PMFTXYT.h  PMFTXYT2D.cc  PMFTXYT2D.h  PMFTXYTM2D.cc  PMFTXYTM2D.h  PMFTXYTP2D.cc  PMFTXYTP2D.h  PMFTXYZ.cc  PMFTXYZ.h  PMFXY2D.cc  PMFXY2D.h  PMFXYZ.cc  PMFXYZ.h  export-PMFTR12.cc  export-PMFTXY.cc  export-PMFTXYT.cc  export-PMFTXYZ.cc  export_PMFT.h  module-pmft.cc  pmft-files.cmake
cpp/registration/: brute_force.h
cpp/shapesplit/: shapesplit.cc  shapesplit.h
cpp/sphericalharmonicorderparameters/: LocalQl.cc  LocalQl.h  LocalQlNear.cc  LocalQlNear.h  LocalWl.cc  LocalWl.h  LocalWlNear.cc  LocalWlNear.h  SolLiq.cc  SolLiq.h  SolLiqNear.cc  SolLiqNear.h  wigner3j.cc  wigner3j.h
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  Makefile  examples.dox  index.dox  readthedocs-env.yml  requirements-rtd.txt
freud/: CMakeLists.txt  __init__.py  _bond.pxd  _box.pxd  _cluster.pxd  _cy_kspace.cpp  _cy_kspace.pyx  _density.pxd  _diffraction.pxd  _environment.pxd  _freud.cpp  _freud.py  _freud.pyx  _interface.pxd  _kspace.pxd  _locality.pxd  _order.pxd  _pairing.pxd  _parallel.pxd  _pmft.pxd  _symmetry.pxd  _trajectory.pxd  _typing.py  _util.pxd  _voronoi.pxd  bond.cpp  bond.pxi  bond.py  bond.pyx  box.cpp  box.pxd  box.pxi  box.py  box.pyx  cluster.cpp  cluster.pxi  cluster.py  cluster.pyx  common.cpp  common.pxd  (+72 more)
py/: CMakeLists.txt
(+795 files in other folders)
