[build-system]
requires = ["numpy>=2.0.0rc1", "scikit-build-core", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "freud-analysis"
version = "3.1.0"
requires-python = ">=3.9"
description = "Powerful, efficient trajectory analysis in scientific Python."
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "The Glotzer Lab" }
]
maintainers = [
    { name = "freud Developers" }
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.19", "rowan>=1.2.1", "scipy>=1.1"]
keywords = ["simulation", "analysis", "molecular dynamics", "soft matter",
            "particle", "system", "computational", "physics"]

[project.urls]
Documentation = "https://freud.readthedocs.io"
Download = "https://pypi.org/project/freud-analysis/"
Source = "https://github.com/glotzerlab/freud"
Issues = "https://github.com/glotzerlab/freud/issues"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = 'black'

[tool.scikit-build]
sdist.exclude = [".github", "doc"]
